@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.9521 2005/03/20 14:15:21 ben Exp $
+$NetBSD: CHANGES,v 1.9522 2005/03/20 15:56:41 hubertf Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -1422,3 +1422,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated tunesbrowser to 0.2.0 [jmmv 2005-03-20]
 	Updated avr-gcc to 3.3.2003.05.11nb1 [jmmv 2005-03-20]
 	Updated fprot-workstation-bin to 4.5.4 [ben 2005-03-20]
+	Updated pkg_install to 20050318 [hubertf 2005-03-20]
